[project]
name = "kubecontext"
version = "0.1.0"
description = "Kubeconfig manager with SSH import and context management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=4.0.0",
    "questionary>=2.0",
    "rich>=14.3.3",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
